<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/purple"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.services.ServiceActivity">

    <ImageView
        android:id="@+id/iv_service"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_haircuts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_service"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/desc_services"
        app:layout_constraintTop_toTopOf="@+id/iv_service" />

    <TextView
        android:id="@+id/desc_services"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:text="@string/desc_services"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_service"
        app:layout_constraintTop_toBottomOf="@+id/title_service" />

    <TextView
        android:id="@+id/time_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/time_services"
        android:textColor="@color/yellow"
        android:gravity="center_vertical"
        android:drawablePadding="6dp"
        app:drawableStartCompat="@drawable/ic_time_24"
        android:drawableTint="@color/yellow"
        app:layout_constraintStart_toStartOf="@+id/iv_service"
        app:layout_constraintTop_toBottomOf="@+id/iv_service" />

    <LinearLayout
        android:id="@+id/form_services"
        android:background="@drawable/bg_top_corner_rounded_white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_services" >

        <TextView
            android:id="@+id/name_label"
            style="@style/text_title"
            android:text="@string/name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameEditTextLayout"
            style="@style/edit_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="14sp"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/phone_label"
            style="@style/text_title"
            android:text="@string/phone_number" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneEditTextLayout"
            style="@style/edit_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="14sp"
                android:hint="@string/hint_phone_number"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/date_label"
            style="@style/text_title"
            android:text="@string/date_and_time" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateEditTextLayout"
            style="@style/edit_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="14sp"
                android:hint="@string/hint_date_and_time"
                android:focusable="false"
                android:clickable="true"
                android:inputType="date"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.dicoding.seasalon.ui.customview.MyBlueButton
            android:id="@+id/btn_booking"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/book_now"
            android:textColor="@color/white"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>