<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/profile_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_full_rounded_purple"
        android:gravity="center"
        android:layout_gravity="center" >

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/ic_person_24" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <com.dicoding.seasalon.ui.customview.MyWhiteButton
            android:id="@+id/btn_log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/log_out" />


    </LinearLayout>
</LinearLayout>