<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:gravity="center"
    tools:context=".ui.authorization.WelcomeActivity">

    <LinearLayout
        android:id="@+id/content_container"
        android:background="@drawable/bg_full_rounded_purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical" >
        
        <LinearLayout
            android:id="@+id/header_container"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_logo_salon" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_app"
                android:textSize="40sp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white_bg"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/desc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_bg"
            android:textSize="18sp"
            android:layout_margin="20dp"
            android:text="@string/welcome_description" />

        <com.dicoding.seasalon.ui.customview.MyTransparentButton
            android:id="@+id/btn_sign_in"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:paddingVertical="20dp" />

        <com.dicoding.seasalon.ui.customview.MyTransparentButton
            android:id="@+id/btn_register"
            android:layout_marginVertical="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:paddingVertical="20dp" />
        
    </LinearLayout>

</LinearLayout>